package tarea.climalert.models;

public class Condition {
  private  String text;

  public String getText(){
    return text;
  }
}
