package tarea.climalert.models;

import lombok.Data;

@Data
public class WeatherApiResponse {
  private CurrentWeather current;
}
