package tarea.climalert.services;

public interface ProcesadorAlertas {
  void analizarCondicionesClimaticas();
}
